# properties-driven-development-tutorial

./: .gitignore  ARTICLE.md  README.md  setup.cfg  setup.py
.github/workflows/: python.yml
src/dict_tree/: __init__.py  tree.py
src/sorted_dict/: __init__.py  sorted_dict.py  tree.py
tests/: test_sorted_dict.py
tests/dict_tree/: test_tree.py
tests/sorted_dict/: test_tree.py
